examples/good/1-basic-int-bool.afl

n :: Int ;

Let n = (2) ;

pred :: Bool ;

Let pred = (False) ;

main :: Int ;

Let main = (n) ;