examples/bad/6-negative-exp.afl
main :: Int;

Let main = ((1)^(-(1)));